<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_shade_2"
    tools:context=".currency">


    <ImageView
        android:id="@+id/image"
        android:layout_width="117dp"
        android:layout_height="95dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/currency_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon" />

    <TextView
        android:id="@+id/symbol"
        android:layout_width="175dp"
        android:layout_height="32dp"
        android:layout_marginTop="4dp"
        android:gravity="bottom|center"
        android:text="@string/symbol"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image" />

    <TextView
        android:id="@+id/name"
        android:layout_width="183dp"
        android:layout_height="34dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:paddingTop="0dp"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/symbol" />

    <TextView
        android:id="@+id/rate"
        android:layout_width="176dp"
        android:layout_height="35dp"
        android:layout_marginBottom="528dp"
        android:gravity="center"
        android:paddingTop="0dp"
        android:text="@string/rate"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/twentyFour"
        android:layout_width="95dp"
        android:layout_height="31dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="32dp"
        android:text="@string/_24hours"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/sevenDays"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/twentyFourData"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="32dp"
        android:gravity="center|top"
        android:text="@string/_0"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/sevenDaysData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.775"
        app:layout_constraintStart_toEndOf="@+id/twentyFour"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.934" />

    <TextView
        android:id="@+id/sevenDays"
        android:layout_width="95dp"
        android:layout_height="31dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/_7days"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twentyFour" />

    <TextView
        android:id="@+id/sevenDaysData"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:gravity="center|top"
        android:text="@string/_0"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.772"
        app:layout_constraintStart_toEndOf="@+id/sevenDays"
        app:layout_constraintTop_toBottomOf="@+id/twentyFourData" />

    <TextView
        android:id="@+id/thirtyDays"
        android:layout_width="95dp"
        android:layout_height="31dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/_30days"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sevenDays" />

    <TextView
        android:id="@+id/thirtyDaysData"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:gravity="center|top"
        android:text="@string/_0"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.777"
        app:layout_constraintStart_toEndOf="@+id/thirtyDays"
        app:layout_constraintTop_toBottomOf="@+id/sevenDaysData" />

    <TextView
        android:id="@+id/marketCap"
        android:layout_width="95dp"
        android:layout_height="31dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/market_cap"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thirtyDays" />

    <TextView
        android:id="@+id/marketCapData"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:gravity="top|start"
        android:text="@string/_0"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.779"
        app:layout_constraintStart_toEndOf="@+id/marketCap"
        app:layout_constraintTop_toBottomOf="@+id/thirtyDaysData" />

    <ImageView
        android:id="@+id/graph"
        android:layout_width="301dp"
        android:layout_height="179dp"
        android:layout_marginBottom="16dp"
        android:background="@color/black"
        android:contentDescription="@string/graph_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rate"
        app:layout_constraintVertical_bias="0.97" />

    <TextView
        android:id="@+id/graphText"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="@string/graphical_visualization_last_7_days"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/graph"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/marketCap"
        app:layout_constraintVertical_bias="0.468" />

</androidx.constraintlayout.widget.ConstraintLayout>