<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="4dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="3dp"
    app:cardBackgroundColor="@color/black_shade_2"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/idRLCurrency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/idTVSymbol"
            android:layout_width="187dp"
            android:layout_height="wrap_content"

            android:layout_marginEnd="3dp"
            android:layout_marginRight="-20dp"
            android:layout_toStartOf="@+id/idTvCurrencyRate"
            android:layout_toLeftOf="@+id/idTvCurrencyRate"
            android:padding="3dp"
            android:text="@string/symbol"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/idTvCurrencyName"
            android:layout_width="284dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/idTVSymbol"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="3dp"
            android:padding="3dp"
            android:text="@string/name"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/idTvCurrencyRate"
            android:layout_width="92dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="3dp"
            android:padding="3dp"
            android:text="@string/rate"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="3dp"
            android:layout_marginRight="3dp"
            android:contentDescription="@string/currency_image"
            android:padding="3dp"
            app:srcCompat="@drawable/mind"
            tools:ignore="ImageContrastCheck"
            android:layout_marginStart="4dp" />


    </RelativeLayout>


</androidx.cardview.widget.CardView>